# perhaps

./: Cargo.toml  Makefile.perhaps  README.md  perhaps.toml
src/: main.rs  makefile.rs  spinner.rs
